--- a/portal-consulting/src/mapa-del-sitio/clientes.html
+++ b/portal-consulting/src/mapa-del-sitio/clientes.html
@@ -10,7 +10,7 @@
     <header>
         <div class="header-inner container" role="banner">
             <a class="logo" href="inicio.html">
-                <img src="../assets/logo.png" alt="Portal logo" />
+                <img src="portal logo.jpg" alt="Portal logo">
                 <span>Portal</span>
             </a>
             <nav role="navigation" aria-label="Principal">
