--- a/portal-consulting/src/mapa-del-sitio/contacto.html
+++ b/portal-consulting/src/mapa-del-sitio/contacto.html
@@ -8,12 +8,12 @@
 </head>
 <body>
     <header>
-        <div class="header-inner container">
+        <div class="header-inner container" role="banner">
             <a class="logo" href="inicio.html">
-                <img src="../assets/logo.png" alt="Portal logo">
+                <img src="../assets/portal-logo.jpg" alt="Portal logo">
                 <span>Portal</span>
             </a>
-            <nav>
+            <nav role="navigation" aria-label="Principal">
                 <a href="inicio.html">Inicio</a>
                 <a href="porque-elegir-portal.html">¿Por qué Portal?</a>
                 <a href="servicios.html">Servicios</a>
