--- a/portal-consulting/src/servicios/web-autoadministrables.html
+++ b/portal-consulting/src/servicios/web-autoadministrables.html
@@ -1,66 +1,83 @@
-<html>
+<!DOCTYPE html>
+<html lang="es">
 <head>
-    <title>Páginas Web Autoadministrables - Portal</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Web Autoadministrables - Portal</title>
     <link rel="stylesheet" href="../css/styles.css">
 </head>
 <body>
     <header>
-        <h1>Páginas Web Autoadministrables</h1>
+        <div class="header-inner">
+            <a href="../mapa-del-sitio/inicio.html" class="logo">Portal Diseño Web</a>
+
+            <nav>
+                <ul>
+                    <li><a href="../mapa-del-sitio/inicio.html">Inicio</a></li>
+                    <li><a href="../mapa-del-sitio/porque-elegir-portal.html">¿Por qué elegir Portal?</a></li>
+
+                    <li class="dropdown">
+                        <span class="dropdown-trigger" tabindex="0">Servicios <span class="arrow">▾</span></span>
+                        <div class="dropdown-content" role="menu" aria-label="Servicios">
+                            <a href="diseno-web.html">Diseño de Páginas Web</a>
+                            <a href="web-adaptativas.html">Páginas Web Adaptativas</a>
+                            <a href="web-autoadministrables.html">Páginas Web Autoadministrables</a>
+                            <a href="hosting.html">Hosting</a>
+                            <a href="actualizacion-web.html">Actualización de páginas web</a>
+                        </div>
+                    </li>
+
+                    <li><a href="../mapa-del-sitio/portfolio.html">Portfolio</a></li>
+                    <li><a href="../mapa-del-sitio/clientes.html">Clientes</a></li>
+                    <li><a href="../mapa-del-sitio/opiniones-cliente.html">Opiniones</a></li>
+                    <li><a href="../mapa-del-sitio/preguntas-frecuentes.html">Preguntas frecuentes</a></li>
+                    <li><a href="../mapa-del-sitio/contacto.html">Contacto</a></li>
+                </ul>
+            </nav>
+        </div>
     </header>
-    <main>
+
+    <main class="container">
         <section>
-            <h2>¿Qué son las Páginas Web Autoadministrables?</h2>
-            <p>Las páginas web autoadministrables son una solución ideal para aquellos que desean tener control total sobre su contenido sin necesidad de conocimientos técnicos avanzados.</p>
-        </section>
-        <section>
-            <h2>Beneficios</h2>
+            <h1>Páginas Web Autoadministrables</h1>
+            <p>Implementamos sitios con paneles de administración fáciles de usar para que puedas actualizar contenidos sin depender de desarrolladores:</p>
             <ul>
-                <li>Facilidad de uso: Actualiza tu contenido de manera sencilla.</li>
-                <li>Sin necesidad de programación: No necesitas ser un experto para gestionar tu sitio.</li>
-                <li>Flexibilidad: Adapta tu página a tus necesidades en cualquier momento.</li>
-            </ul>
-        </section>
-        <section>
-            <h2>Características</h2>
-            <p>Nuestras páginas autoadministrables incluyen:</p>
-            <ul>
-                <li>Interfaz intuitiva para la gestión de contenido.</li>
-                <li>Plantillas personalizables para un diseño único.</li>
-                <li>Soporte técnico disponible para resolver cualquier duda.</li>
+                <li>Gestión de páginas y entradas</li>
+                <li>Editor visual y gestión de imágenes</li>
+                <li>Roles y permisos de usuario</li>
+                <li>Formación y documentación al finalizar</li>
             </ul>
         </section>
     </main>
+
     <footer class="footer-dark">
         <div class="container">
             <div class="footer-columns">
-                <!-- Columna 1: Mapa del Sitio -->
                 <div class="footer-col">
                     <h4>Mapa del Sitio</h4>
                     <ul>
-                        <li><a href="inicio.html">Inicio</a></li>
-                        <li><a href="porque-elegir-portal.html">¿Por qué elegir Portal?</a></li>
-                        <li><a href="servicios.html">Servicios</a></li>
-                        <li><a href="portfolio.html">Portfolio</a></li>
-                        <li><a href="clientes.html">Clientes</a></li>
-                        <li><a href="opiniones-cliente.html">Opiniones de Clientes</a></li>
-                        <li><a href="preguntas-frecuentes.html">Preguntas Frecuentes</a></li>
-                        <li><a href="contacto.html">Contacto</a></li>
+                        <li><a href="../mapa-del-sitio/inicio.html">Inicio</a></li>
+                        <li><a href="../mapa-del-sitio/porque-elegir-portal.html">¿Por qué elegir Portal?</a></li>
+                        <li><a href="../mapa-del-sitio/servicios.html">Servicios</a></li>
+                        <li><a href="../mapa-del-sitio/portfolio.html">Portfolio</a></li>
+                        <li><a href="../mapa-del-sitio/clientes.html">Clientes</a></li>
+                        <li><a href="../mapa-del-sitio/opiniones-cliente.html">Opiniones de Clientes</a></li>
+                        <li><a href="../mapa-del-sitio/preguntas-frecuentes.html">Preguntas Frecuentes</a></li>
+                        <li><a href="../mapa-del-sitio/contacto.html">Contacto</a></li>
                     </ul>
                 </div>
 
-                <!-- Columna 2: Servicios -->
                 <div class="footer-col">
                     <h4>Servicios</h4>
                     <ul>
-                        <li><a href="../servicios/diseno-web.html">Diseño de Páginas Web</a></li>
-                        <li><a href="../servicios/web-adaptativas.html">Páginas Web Adaptativas</a></li>
-                        <li><a href="../servicios/web-autoadministrables.html">Páginas Web Autoadministrables</a></li>
-                        <li><a href="../servicios/hosting.html">Hosting</a></li>
-                        <li><a href="../servicios/actualizacion-web.html">Actualización de páginas web</a></li>
+                        <li><a href="diseno-web.html">Diseño de Páginas Web</a></li>
+                        <li><a href="web-adaptativas.html">Páginas Web Adaptativas</a></li>
+                        <li><a href="web-autoadministrables.html">Páginas Web Autoadministrables</a></li>
+                        <li><a href="hosting.html">Hosting</a></li>
+                        <li><a href="actualizacion-web.html">Actualización de páginas web</a></li>
                     </ul>
                 </div>
 
-                <!-- Columna 3: Contáctenos -->
                 <div class="footer-col">
                     <h4>Contáctenos</h4>
                     <ul class="contact-info">
@@ -76,18 +93,9 @@
                 </div>
             </div>
 
-            <div class="footer-badges">
-                <img src="../assets/badges/data-fiscal.png" alt="Data Fiscal" class="badge">
-                <div class="certifications">
-                    <img src="../assets/badges/six-sigma.png" alt="Six Sigma Black Belt" class="cert-badge">
-                    <img src="../assets/badges/aida.png" alt="A.I.D.A Marketing Principles" class="cert-badge">
-                </div>
-            </div>
-
             <div class="footer-bottom">
                 <p>&copy; 2023 - 2025 • Portal Diseño Web Argentina • Todos los Derechos Reservados</p>
                 <p>TEL: (011) 15-5139-6514 • Buenos Aires • Argentina</p>
-                <img src="../assets/logo-footer.png" alt="Portal" class="footer-logo">
             </div>
         </div>
     </footer>
