--- a/portal-consulting/src/mapa-del-sitio/portfolio.html
+++ b/portal-consulting/src/mapa-del-sitio/portfolio.html
@@ -1,5 +1,3 @@
-Sure, here's the content for the file `/portal-consulting/portal-consulting/src/mapa-del-sitio/portfolio.html`:
-
 <!DOCTYPE html>
 <html lang="es">
 <head>
@@ -10,20 +8,22 @@ Sure, here's the content for the file `/portal-consulting/portal-consulting/src/
 </head>
 <body>
     <header>
-        <h1>Portfolio de Portal</h1>
-        <nav>
-            <ul>
-                <li><a href="inicio.html">Inicio</a></li>
-                <li><a href="porque-elegir-portal.html">Porqué elegir Portal?</a></li>
-                <li><a href="servicios.html">Servicios</a></li>
-                <li><a href="portfolio.html">Portfolio</a></li>
-                <li><a href="clientes.html">Clientes</a></li>
-                <li><a href="opiniones-cliente.html">Opiniones de cliente</a></li>
-                <li><a href="preguntas-frecuentes.html">Preguntas frecuentes</a></li>
-                <li><a href="contacto.html">Contacto</a></li>
-            </ul>
-        </nav>
+        <div class="header-inner">
+            <nav>
+                <ul>
+                    <li><a href="inicio.html">Inicio</a></li>
+                    <li><a href="porque-elegir-portal.html">¿Por qué elegir Portal?</a></li>
+                    <li><a href="servicios.html">Servicios</a></li>
+                    <li><a href="portfolio.html">Portfolio</a></li>
+                    <li><a href="clientes.html">Clientes</a></li>
+                    <li><a href="opiniones-cliente.html">Opiniones de cliente</a></li>
+                    <li><a href="preguntas-frecuentes.html">Preguntas frecuentes</a></li>
+                    <li><a href="contacto.html">Contacto</a></li>
+                </ul>
+            </nav>
+        </div>
     </header>
+
     <main>
         <section>
             <h2>Nuestros Proyectos</h2>
@@ -91,18 +91,9 @@ Sure, here's the content for the file `/portal-consulting/portal-consulting/src/
                 </div>
             </div>
 
-            <div class="footer-badges">
-                <img src="../assets/badges/data-fiscal.png" alt="Data Fiscal" class="badge">
-                <div class="certifications">
-                    <img src="../assets/badges/six-sigma.png" alt="Six Sigma Black Belt" class="cert-badge">
-                    <img src="../assets/badges/aida.png" alt="A.I.D.A Marketing Principles" class="cert-badge">
-                </div>
-            </div>
-
             <div class="footer-bottom">
                 <p>&copy; 2023 - 2025 • Portal Diseño Web Argentina • Todos los Derechos Reservados</p>
                 <p>TEL: (011) 15-5139-6514 • Buenos Aires • Argentina</p>
-                <img src="../assets/logo-footer.png" alt="Portal" class="footer-logo">
             </div>
         </div>
     </footer>
