--- a/portal-consulting/src/servicios/diseno-web.html
+++ b/portal-consulting/src/servicios/diseno-web.html
@@ -3,55 +3,82 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Diseño de Páginas Web - Portal</title>
+    <title>Diseño Web - Portal</title>
     <link rel="stylesheet" href="../css/styles.css">
 </head>
 <body>
     <header>
-        <h1>Diseño de Páginas Web</h1>
+        <div class="header-inner">
+            <a href="../mapa-del-sitio/inicio.html" class="logo">Portal Diseño Web</a>
+
+            <nav>
+                <ul>
+                    <li><a href="../mapa-del-sitio/inicio.html">Inicio</a></li>
+                    <li><a href="../mapa-del-sitio/porque-elegir-portal.html">¿Por qué elegir Portal?</a></li>
+
+                    <li class="dropdown">
+                        <span class="dropdown-trigger" tabindex="0">Servicios <span class="arrow">▾</span></span>
+                        <div class="dropdown-content" role="menu" aria-label="Servicios">
+                            <a href="diseno-web.html">Diseño de Páginas Web</a>
+                            <a href="web-adaptativas.html">Páginas Web Adaptativas</a>
+                            <a href="web-autoadministrables.html">Páginas Web Autoadministrables</a>
+                            <a href="hosting.html">Hosting</a>
+                            <a href="actualizacion-web.html">Actualización de páginas web</a>
+                        </div>
+                    </li>
+
+                    <li><a href="../mapa-del-sitio/portfolio.html">Portfolio</a></li>
+                    <li><a href="../mapa-del-sitio/clientes.html">Clientes</a></li>
+                    <li><a href="../mapa-del-sitio/opiniones-cliente.html">Opiniones</a></li>
+                    <li><a href="../mapa-del-sitio/preguntas-frecuentes.html">Preguntas frecuentes</a></li>
+                    <li><a href="../mapa-del-sitio/contacto.html">Contacto</a></li>
+                </ul>
+            </nav>
+        </div>
     </header>
-    <main>
+
+    <main class="container">
         <section>
-            <h2>Características del Servicio</h2>
-            <p>En "Portal", ofrecemos un servicio de diseño de páginas web que se adapta a las necesidades de nuestros clientes. Nuestros diseños son:</p>
+            <h1>Diseño de Páginas Web</h1>
+            <p>Diseñamos sitios web modernos, accesibles y optimizados para conversión. Nuestro proceso incluye:</p>
             <ul>
-                <li><strong>Autoajustables:</strong> Nuestras páginas se ven bien en cualquier dispositivo, ya sea un ordenador, tablet o móvil.</li>
-                <li><strong>Optimización para Buscadores (SEO):</strong> Implementamos las mejores prácticas de SEO para ayudar a que tu sitio web sea encontrado fácilmente.</li>
-                <li><strong>Enfoque en Marketing y Resultados:</strong> Nos aseguramos de que tu sitio no solo sea atractivo, sino que también convierta visitantes en clientes.</li>
+                <li>Análisis y estructura de contenidos</li>
+                <li>Diseño visual y prototipado</li>
+                <li>Implementación responsive</li>
+                <li>Optimización SEO básica</li>
+                <li>Entrega y soporte post-lanzamiento</li>
             </ul>
         </section>
     </main>
+
     <footer class="footer-dark">
         <div class="container">
             <div class="footer-columns">
-                <!-- Columna 1: Mapa del Sitio -->
                 <div class="footer-col">
                     <h4>Mapa del Sitio</h4>
                     <ul>
-                        <li><a href="inicio.html">Inicio</a></li>
-                        <li><a href="porque-elegir-portal.html">¿Por qué elegir Portal?</a></li>
-                        <li><a href="servicios.html">Servicios</a></li>
-                        <li><a href="portfolio.html">Portfolio</a></li>
-                        <li><a href="clientes.html">Clientes</a></li>
-                        <li><a href="opiniones-cliente.html">Opiniones de Clientes</a></li>
-                        <li><a href="preguntas-frecuentes.html">Preguntas Frecuentes</a></li>
-                        <li><a href="contacto.html">Contacto</a></li>
+                        <li><a href="../mapa-del-sitio/inicio.html">Inicio</a></li>
+                        <li><a href="../mapa-del-sitio/porque-elegir-portal.html">¿Por qué elegir Portal?</a></li>
+                        <li><a href="../mapa-del-sitio/servicios.html">Servicios</a></li>
+                        <li><a href="../mapa-del-sitio/portfolio.html">Portfolio</a></li>
+                        <li><a href="../mapa-del-sitio/clientes.html">Clientes</a></li>
+                        <li><a href="../mapa-del-sitio/opiniones-cliente.html">Opiniones de Clientes</a></li>
+                        <li><a href="../mapa-del-sitio/preguntas-frecuentes.html">Preguntas Frecuentes</a></li>
+                        <li><a href="../mapa-del-sitio/contacto.html">Contacto</a></li>
                     </ul>
                 </div>
 
-                <!-- Columna 2: Servicios -->
                 <div class="footer-col">
                     <h4>Servicios</h4>
                     <ul>
-                        <li><a href="../servicios/diseno-web.html">Diseño de Páginas Web</a></li>
-                        <li><a href="../servicios/web-adaptativas.html">Páginas Web Adaptativas</a></li>
-                        <li><a href="../servicios/web-autoadministrables.html">Páginas Web Autoadministrables</a></li>
-                        <li><a href="../servicios/hosting.html">Hosting</a></li>
-                        <li><a href="../servicios/actualizacion-web.html">Actualización de páginas web</a></li>
+                        <li><a href="diseno-web.html">Diseño de Páginas Web</a></li>
+                        <li><a href="web-adaptativas.html">Páginas Web Adaptativas</a></li>
+                        <li><a href="web-autoadministrables.html">Páginas Web Autoadministrables</a></li>
+                        <li><a href="hosting.html">Hosting</a></li>
+                        <li><a href="actualizacion-web.html">Actualización de páginas web</a></li>
                     </ul>
                 </div>
 
-                <!-- Columna 3: Contáctenos -->
                 <div class="footer-col">
                     <h4>Contáctenos</h4>
                     <ul class="contact-info">
@@ -67,18 +94,9 @@
                 </div>
             </div>
 
-            <div class="footer-badges">
-                <img src="../assets/badges/data-fiscal.png" alt="Data Fiscal" class="badge">
-                <div class="certifications">
-                    <img src="../assets/badges/six-sigma.png" alt="Six Sigma Black Belt" class="cert-badge">
-                    <img src="../assets/badges/aida.png" alt="A.I.D.A Marketing Principles" class="cert-badge">
-                </div>
-            </div>
-
             <div class="footer-bottom">
                 <p>&copy; 2023 - 2025 • Portal Diseño Web Argentina • Todos los Derechos Reservados</p>
                 <p>TEL: (011) 15-5139-6514 • Buenos Aires • Argentina</p>
-                <img src="../assets/logo-footer.png" alt="Portal" class="footer-logo">
             </div>
         </div>
     </footer>
