--- a/portal-consulting/src/servicios/hosting.html
+++ b/portal-consulting/src/servicios/hosting.html
@@ -1,5 +1,3 @@
-Sure, here's the content for the file: /portal-consulting/portal-consulting/src/servicios/hosting.html
-
 <!DOCTYPE html>
 <html lang="es">
 <head>
@@ -10,11 +8,38 @@ Sure, here's the content for the file: /portal-consulting/portal-consulting/src/
 </head>
 <body>
     <header>
-        <h1>Servicios de Hosting</h1>
+        <div class="header-inner">
+            <a href="../mapa-del-sitio/inicio.html" class="logo">Portal Diseño Web</a>
+
+            <nav>
+                <ul>
+                    <li><a href="../mapa-del-sitio/inicio.html">Inicio</a></li>
+                    <li><a href="../mapa-del-sitio/porque-elegir-portal.html">¿Por qué elegir Portal?</a></li>
+
+                    <li class="dropdown">
+                        <span class="dropdown-trigger" tabindex="0">Servicios <span class="arrow">▾</span></span>
+                        <div class="dropdown-content" role="menu" aria-label="Servicios">
+                            <a href="diseno-web.html">Diseño de Páginas Web</a>
+                            <a href="web-adaptativas.html">Páginas Web Adaptativas</a>
+                            <a href="web-autoadministrables.html">Páginas Web Autoadministrables</a>
+                            <a href="hosting.html">Hosting</a>
+                            <a href="actualizacion-web.html">Actualización de páginas web</a>
+                        </div>
+                    </li>
+
+                    <li><a href="../mapa-del-sitio/portfolio.html">Portfolio</a></li>
+                    <li><a href="../mapa-del-sitio/clientes.html">Clientes</a></li>
+                    <li><a href="../mapa-del-sitio/opiniones-cliente.html">Opiniones</a></li>
+                    <li><a href="../mapa-del-sitio/preguntas-frecuentes.html">Preguntas frecuentes</a></li>
+                    <li><a href="../mapa-del-sitio/contacto.html">Contacto</a></li>
+                </ul>
+            </nav>
+        </div>
     </header>
-    <main>
+
+    <main class="container">
         <section>
-            <h2>¿Por qué elegir nuestro servicio de hosting?</h2>
+            <h1>Servicios de Hosting</h1>
             <p>En Portal, ofrecemos soluciones de hosting confiables y escalables para satisfacer las necesidades de su negocio. Nuestros servicios incluyen:</p>
             <ul>
                 <li>Hosting compartido y dedicado</li>
@@ -23,8 +48,7 @@ Sure, here's the content for the file: /portal-consulting/portal-consulting/src/
                 <li>Certificados SSL para mayor seguridad</li>
                 <li>Escalabilidad para crecer con su negocio</li>
             </ul>
-        </section>
-        <section>
+
             <h2>Características del servicio</h2>
             <p>Nuestro servicio de hosting se destaca por:</p>
             <ul>
@@ -35,37 +59,35 @@ Sure, here's the content for the file: /portal-consulting/portal-consulting/src/
             </ul>
         </section>
     </main>
+
     <footer class="footer-dark">
         <div class="container">
             <div class="footer-columns">
-                <!-- Columna 1: Mapa del Sitio -->
                 <div class="footer-col">
                     <h4>Mapa del Sitio</h4>
                     <ul>
-                        <li><a href="inicio.html">Inicio</a></li>
-                        <li><a href="porque-elegir-portal.html">¿Por qué elegir Portal?</a></li>
-                        <li><a href="servicios.html">Servicios</a></li>
-                        <li><a href="portfolio.html">Portfolio</a></li>
-                        <li><a href="clientes.html">Clientes</a></li>
-                        <li><a href="opiniones-cliente.html">Opiniones de Clientes</a></li>
-                        <li><a href="preguntas-frecuentes.html">Preguntas Frecuentes</a></li>
-                        <li><a href="contacto.html">Contacto</a></li>
+                        <li><a href="../mapa-del-sitio/inicio.html">Inicio</a></li>
+                        <li><a href="../mapa-del-sitio/porque-elegir-portal.html">¿Por qué elegir Portal?</a></li>
+                        <li><a href="../mapa-del-sitio/servicios.html">Servicios</a></li>
+                        <li><a href="../mapa-del-sitio/portfolio.html">Portfolio</a></li>
+                        <li><a href="../mapa-del-sitio/clientes.html">Clientes</a></li>
+                        <li><a href="../mapa-del-sitio/opiniones-cliente.html">Opiniones de Clientes</a></li>
+                        <li><a href="../mapa-del-sitio/preguntas-frecuentes.html">Preguntas Frecuentes</a></li>
+                        <li><a href="../mapa-del-sitio/contacto.html">Contacto</a></li>
                     </ul>
                 </div>
 
-                <!-- Columna 2: Servicios -->
                 <div class="footer-col">
                     <h4>Servicios</h4>
                     <ul>
-                        <li><a href="../servicios/diseno-web.html">Diseño de Páginas Web</a></li>
-                        <li><a href="../servicios/web-adaptativas.html">Páginas Web Adaptativas</a></li>
-                        <li><a href="../servicios/web-autoadministrables.html">Páginas Web Autoadministrables</a></li>
-                        <li><a href="../servicios/hosting.html">Hosting</a></li>
-                        <li><a href="../servicios/actualizacion-web.html">Actualización de páginas web</a></li>
+                        <li><a href="diseno-web.html">Diseño de Páginas Web</a></li>
+                        <li><a href="web-adaptativas.html">Páginas Web Adaptativas</a></li>
+                        <li><a href="web-autoadministrables.html">Páginas Web Autoadministrables</a></li>
+                        <li><a href="hosting.html">Hosting</a></li>
+                        <li><a href="actualizacion-web.html">Actualización de páginas web</a></li>
                     </ul>
                 </div>
 
-                <!-- Columna 3: Contáctenos -->
                 <div class="footer-col">
                     <h4>Contáctenos</h4>
                     <ul class="contact-info">
@@ -81,18 +103,9 @@ Sure, here's the content for the file: /portal-consulting/portal-consulting/src/
                 </div>
             </div>
 
-            <div class="footer-badges">
-                <img src="../assets/badges/data-fiscal.png" alt="Data Fiscal" class="badge">
-                <div class="certifications">
-                    <img src="../assets/badges/six-sigma.png" alt="Six Sigma Black Belt" class="cert-badge">
-                    <img src="../assets/badges/aida.png" alt="A.I.D.A Marketing Principles" class="cert-badge">
-                </div>
-            </div>
-
             <div class="footer-bottom">
                 <p>&copy; 2023 - 2025 • Portal Diseño Web Argentina • Todos los Derechos Reservados</p>
                 <p>TEL: (011) 15-5139-6514 • Buenos Aires • Argentina</p>
-                <img src="../assets/logo-footer.png" alt="Portal" class="footer-logo">
             </div>
         </div>
     </footer>
